force-app/main/default/objects/Onboarding_Step__c/fields/Related_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Related_Onboarding__c</fullName>
    <label>Related Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding Steps</relationshipLabel>
    <relationshipName>Onboarding_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>