force-app/main/default/objects/Onboarding_Step__c/validationRules/Require_Comment_When_Status_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Comment_When_Status_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(ISPICKVAL(Onboarding_Status__c , &quot;Completed&quot;),
 ISCHANGED(Onboarding_Status__c),
 ISBLANK(Comment__c)
)</errorConditionFormula>
    <errorMessage>A Comment is required before the Onboarding Status can be marked as Completed.</errorMessage>
</ValidationRule>