force-app/main/default/objects/Onboarding_Step__c/listViews/Operations_Queue_Onboarding_Step.listView-meta.xml
<ListView>
    <fullName>Operations_Queue_Onboarding_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>Operations Queue</label>
    <queue>Operations_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>